ChangeInitAnnotation2