@@ -6,7 +6,7 @@ import org.springframework.stereotype.Repository;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicLong;
-
+import java.util.stream.Collectors;
 
 
 // Stub
@@ -24,7 +24,7 @@ public class PostRepository {
     }
 
     public List<Post> all() {
-        return map.values().stream().toList();
+        return map.values().stream().collect(Collectors.toList());
     }
 
 
